fix: APPS-3090   Move CSS from EventSeries page to SectionStaffArticleList component for FTVA Theme (#663)
* updates to styles

* linting

* fix border-bottom

* update to background

* update to background

* update to background

* add section wrapper story and styles - medium is still broken in section wrapper

* update small and medium styling

* linting

--- a/src/styles/ftva/_section-wrapper.scss
+++ b/src/styles/ftva/_section-wrapper.scss
@@ -10,7 +10,7 @@
 
     .section-header:has(+ ul.section-teaser-card.ftva) {
         // Set to zero to remove margin under Section Title
-        // Explore Other Series or Events or Related Collections and Recent Posts 
+        // Explore Other Series or Events or Related Collections and Recent Posts
         margin-bottom: 0;
 
         :deep(.section-title) {
@@ -86,6 +86,16 @@
             margin-bottom: 20px;
         }
 
+        .tab-item {
+            margin-left: 0;
+            margin-right: 0;
+
+            .tab-content {
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
+
         &.theme-paleblue {
             --color-theme: #{$page-blue};
             --color-children-theme: var(--color-white);
@@ -101,6 +111,24 @@
                             background-color: var(--color-children-theme);
                         }
                     }
+                }
+
+                .section-staff-article-list {
+                    background-color: var(--color-theme);
+                    background-color: var(--color-children-theme);
+                }
+            }
+        }
+    }
+
+    @media #{$small} {
+        &.theme-paleblue {
+            --color-theme: #{$page-blue};
+            --color-children-theme: var(--color-white);
+
+            :deep(*) {
+                .section-staff-article-list {
+                    background-color: var(--color-theme);
                 }
             }
         }
